Implementação do CRUD e Views Consumo

--- a/ConsumoVeiculo/Views/Veiculo/Index.cshtml
+++ b/ConsumoVeiculo/Views/Veiculo/Index.cshtml
@@ -6,6 +6,8 @@
 
 <h1>Lista de veículos</h1>
 
+<h2 class="Teste"></h2>
+
 <p>
     <a asp-action="Create" class="btn btn-success">Adicionar novo veículo</a>
 </p>
