--- a/ConsumoVeiculo/Views/Consumos/Edit.cshtml
+++ b/ConsumoVeiculo/Views/Consumos/Edit.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Valor" class="control-label"></label>
-                <input asp-for="Valor" class="form-control" />
+                <input value="@Model.Valor" id="Valor" class="form-control" name="Valor" required data-val-required="Valor é obrigatório."/>
                 <span asp-validation-for="Valor" class="text-danger"></span>
             </div>
             <div class="form-group">
