--- a/ConsumoVeiculo/Views/Shared/_Layout.cshtml
+++ b/ConsumoVeiculo/Views/Shared/_Layout.cshtml
@@ -32,6 +32,18 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Index">Usuários</a>
                         </li>
                     </ul>
+                    <ul class="navbar-nav">
+                        @if(User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">Olá, @User.Identity.Name <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Logout"></a>Sair</li>
+                        }
+                        else
+                        {
+                            <li>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Login">Login</a>
+                            </li>
+                        }
+                    </ul>
                 </div>
             </div>
         </nav>
